# space_enginee.rs

./: .gitignore  Cargo.toml  README.md
crate/: Cargo.toml  README.md
crate-compat/: Cargo.toml  README.md
crate-compat/src/: bcl.rs  bitfield.rs  collections.rs  compression.rs  deku.rs  direction.rs  lib.rs  math.rs  nullable.rs  xml.rs
crate-transport/: Cargo.toml  README.md
crate-transport/examples/: parse_rpc.rs
crate-transport/src/: control.rs  lib.rs  packet.rs  replication.rs  rpc.rs  server_data.rs
crate-transport/src/protocol/: mod.rs  replicated_types.rs
crate-transport/src/protocol/instance_events/: mod.rs
crate-transport/src/protocol/instance_events/components/: mod.rs  my_autopilot_component.rs  my_basic_mission_autopilot.rs  my_basic_mission_follow_home.rs  my_basic_mission_follow_player.rs  my_character_stat_component.rs  my_chat_broadcast_entity_component.rs  my_entity_stat_component.rs  my_event_angle_changed.rs  my_event_block_added_removed.rs  my_event_block_integrity.rs  my_event_block_on_off.rs  my_event_cargo_filled_entity_component.rs  my_event_cockpit_occupied.rs  my_event_connector_connected.rs  my_event_connector_ready_to_lock.rs  my_event_distance_to_locked_target.rs  my_event_door_opened.rs  my_event_gas_tank_filled.rs  my_event_grid_speed_changed.rs  my_event_landing_gear_locked.rs  my_event_magnetic_lock_ready.rs  my_event_merged.rs  my_event_natural_gravity_changed.rs  my_event_piston_position.rs  my_event_power_output.rs  my_event_rotor_hinge_attached_detached.rs  my_event_stored_power.rs  my_event_surface_height.rs  my_event_thrust_percentage.rs  my_farm_plot_logic.rs  my_lcd_surface_component.rs  my_maintenance_panel_component.rs  my_multi_text_panel_component.rs  my_offensive_with_weapons_combat_component.rs  my_path_recorder_component.rs  my_resource_storage_component.rs  my_safe_zone_component.rs  my_signal_channel_entity_component.rs  my_signal_receiver_entity_component.rs  (+4 more)
crate-transport/src/protocol/instance_events/entities/: mod.rs  my_air_vent.rs  my_assembler.rs  my_beacon.rs  my_button_panel.rs  my_cargo_container_inventory_bag_entity.rs  my_character.rs  my_cockpit.rs  my_collector.rs  my_contract_block.rs  my_conveyor_sorter.rs  my_cube_grid.rs  my_data_broadcaster.rs  my_defensive_combat_block.rs  my_door_base.rs  my_event_controller_block.rs  my_floating_object.rs  my_forageable_entity.rs  my_functional_block.rs  my_gas_generator.rs  my_gas_tank.rs  my_inventory_aggregate.rs  my_jukebox.rs  my_jump_drive.rs  my_landing_gear.rs  my_laser_antenna.rs  my_laser_broadcaster.rs  my_mechanical_connection_block_base.rs  my_medical_room.rs  my_modifiable_entity.rs  my_motor_stator.rs  my_offensive_combat_block.rs  my_parachute.rs  my_piston_base.rs  my_planet.rs  my_production_block.rs  my_programmable_block.rs  my_projector_base.rs  my_radio_antenna.rs  my_radio_broadcaster.rs  (+17 more)
crate-transport/src/protocol/instance_events/other/: mod.rs  my_inventory.rs  my_procedural_logical_sector.rs  my_property_sync_state_group.rs
crate-transport/src/protocol/instance_events/weapons/: mod.rs  my_large_turret_base.rs  my_small_gatling_gun.rs  my_small_missile_launcher.rs  my_user_controllable_gun.rs
crate-transport/src/protocol/static_events/: mod.rs
crate-transport/src/protocol/static_events/entities/: mod.rs  my_contract_block.rs  my_cube_builder.rs  my_cube_grid.rs  my_entities.rs  my_floating_objects.rs  my_hand_tool_base.rs  my_planet.rs  my_planet_environment_session_component.rs  my_programmable_block.rs  my_projector_base.rs  my_session_component_safe_zones.rs  my_slim_block.rs  my_voxel_base.rs
crate-transport/src/protocol/static_events/gui/: mod.rs  my_gui_blueprint_screen_reworked.rs  my_gui_screen_admin_menu.rs  my_gui_screen_debug_character_stats.rs  my_gui_screen_debug_economy.rs  my_gui_screen_debug_encounters.rs  my_gui_screen_debug_gameplay.rs  my_gui_screen_debug_network.rs  my_gui_screen_debug_spawn_menu.rs  my_gui_screen_debug_system.rs  my_gui_screen_editor.rs  my_gui_screen_medicals.rs  my_gui_screen_players.rs  my_gui_screen_safe_zone_filter.rs  my_terminal_faction_controller.rs  my_terminal_info_controller.rs
crate-transport/src/protocol/static_events/multiplayer/: mod.rs  my_camera_collection.rs  my_client_state.rs  my_faction_collection.rs  my_gps_collection.rs  my_multiplayer.rs  my_multiplayer_base.rs  my_multiplayer_client_base.rs  my_multiplayer_server_base.rs  my_player_collection.rs  my_sync_damage.rs  my_tool_bar_collection.rs  my_virtual_clients.rs
crate-transport/src/protocol/static_events/other/: command_save.rs  command_stop.rs  mod.rs  my_advanced_debug_draw.rs  my_ai_target_manager.rs  my_angle_grinder.rs  my_asset_modifier_component.rs  my_automatic_rifle_gun.rs  my_banking_system.rs  my_campaign_session_component.rs  my_chat_system.rs  my_contract.rs  my_coordinate_system.rs  my_entity_component_system.rs  my_explosions.rs  my_global_encounters_generator.rs  my_grid_jump_drive_system.rs  my_gui_screen_debug_ai.rs  my_gui_screen_debug_cube_grid.rs  my_gui_screen_debug_travel.rs  my_highlight_system.rs  my_inventory.rs  my_missile.rs  my_multiplayer.rs  my_physics.rs  my_render_profiler.rs  my_sector_weather_component.rs  (+18 more)
crate-transport/src/protocol/version/: embedded_schema.json  mod.rs
crate/src/: lib.rs
(+26 files in other folders)
