[workspace]
members = ["crate", "crate-compat", "crate-sys"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(feature, values(\"build-schemas\"))"]

[workspace.dependencies]
deku = "0.20"
proto_rs = { version = "0.11", features = ["stable"] }
serde = "1"
glam = "0.29"
enumflags2 = "0.7.12"
chrono = "0.4"
uuid = "1.7"
quick-xml = { version = "0.37", features = ["serialize"] }
