[workspace]
members = ["crate", "crate-compat", "crate-sys"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(feature, values(\"build-schemas\"))"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Casts are inherent to the C#-to-Rust type mapping
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
# Too pervasive to suppress inline
must_use_candidate = "allow"

[workspace.dependencies]
deku = "0.20"
proto_rs = { version = "0.11", features = ["stable"] }
serde = "1"
serde-inline-default = "1.0"
glam = "0.29"
enumflags2 = "0.7.12"
chrono = "0.4"
uuid = "1.7"
quick-xml = { version = "0.37", features = ["serialize"] }
