[package]
name = "space_engineers"
version = "1.208015.3"
edition.workspace = true
rust-version.workspace = true
description = "Rust data structures and serialization for Space Engineers"
license = "MIT"

[lints]
workspace = true

[dependencies]
space_engineers_compat = { path = "../crate-compat", version = "1.208015.3" }
space_engineers_sys = { path = "../crate-sys", version = "1.208015.3" }

[dev-dependencies]
quick-xml = { workspace = true }
